--- a/c/ca/cal/calastrology.com.html
+++ b/c/ca/cal/calastrology.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the calastrology.com privacy policy that was archived on 2009-04-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090418073135id_/http%3A//www.calastrology.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the calastrology.com privacy policy that was archived on 2009-10-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091030082322id_/http%3A//www.calastrology.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><script type="text/javascript"> 
  <!-- 
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" type="text/css" href="http://lib.store.yahoo.net/lib/calastrology/styles.css">
 
-<link rel="shortcut icon" href="http://lib.store.yahoo.net/lib/calastrology/favicon.ico" type="image/x-icon"></head><body bgcolor="ffffcc" background="http://us.st12.yimg.com/us.st.yimg.com/I/calastrology_2047_0"><table border="0" cellspacing="0" cellpadding="0"><tbody><tr valign="top"><td><br><map name="16ef749e8238c2eb"><area shape="rect" coords="0,0,115,180" href="index.html"><area shape="rect" coords="0,180,115,203" href="spells.html"><area shape="rect" coords="0,203,115,226" href="asread.html"><area shape="rect" coords="0,226,115,249" href="goodluckpieces.html"><area shape="rect" coords="0,249,115,272" href="wangadolls.html"><area shape="rect" coords="0,272,115,295" href="voodoospells.html"><area shape="rect" coords="0,295,115,318" href="voodoo.html"><area shape="rect" coords="0,318,115,341" href="spellkits.html"><area shape="rect" coords="0,341,115,364" href="sterling-silver-jewelry.html"><area shape="rect" coords="0,364,115,387" href="love.html"><area shape="rect" coords="0,387,115,410" href="money.html"><area shape="rect" coords="0,410,115,494" href="ourguarantee.html"><area shape="rect" coords="0,494,115,529" href="faq.html"><area shape="rect" coords="0,529,115,552" href="testimonials.html"><area shape="rect" coords="0,552,115,575" href="afprog.html"><area shape="rect" coords="0,575,115,598" href="info.html"><area shape="rect" coords="0,598,115,621" href="nsearch.html"><area shape="rect" coords="0,621,115,691" href="http://order.store.yahoo.net/cgi-bin/wg-order?calastrology"></map><img src="http://us.st12.yimg.com/us.st.yimg.com/I/calastrology_2048_0" width="115" height="691" usemap="#16ef749e8238c2eb" border="0" hspace="0" vspace="0" ismap=""><br><br>
+<link rel="shortcut icon" href="http://lib.store.yahoo.net/lib/calastrology/favicon.ico" type="image/x-icon"></head><body bgcolor="ffffcc" background="http://ep.yimg.com/ca/I/calastrology_2077_39295"><table border="0" cellspacing="0" cellpadding="0"><tbody><tr valign="top"><td><br><map name="19e14aea74bc3a9"><area shape="rect" coords="0,0,115,180" href="index.html"><area shape="rect" coords="0,180,115,203" href="spells.html"><area shape="rect" coords="0,203,115,226" href="asread.html"><area shape="rect" coords="0,226,115,249" href="goodluckpieces.html"><area shape="rect" coords="0,249,115,272" href="wangadolls.html"><area shape="rect" coords="0,272,115,295" href="voodoospells.html"><area shape="rect" coords="0,295,115,318" href="voodoo.html"><area shape="rect" coords="0,318,115,341" href="spellkits.html"><area shape="rect" coords="0,341,115,364" href="sterling-silver-jewelry.html"><area shape="rect" coords="0,364,115,387" href="love.html"><area shape="rect" coords="0,387,115,410" href="money.html"><area shape="rect" coords="0,410,115,494" href="ourguarantee.html"><area shape="rect" coords="0,494,115,529" href="faq.html"><area shape="rect" coords="0,529,115,552" href="testimonials.html"><area shape="rect" coords="0,552,115,575" href="afprog.html"><area shape="rect" coords="0,575,115,598" href="info.html"><area shape="rect" coords="0,598,115,621" href="nsearch.html"><area shape="rect" coords="0,621,115,691" href="http://order.store.yahoo.net/cgi-bin/wg-order?calastrology"></map><img src="http://ep.yimg.com/ca/I/calastrology_2077_21155" width="115" height="691" usemap="#19e14aea74bc3a9" border="0" hspace="0" vspace="0" ismap=""><br><br>
 
 <!-- SCANALERT -->
 <table border="0" class="scanalert" cellspacing="0" cellpadding="4" width="115">
@@ -25,7 +25,7 @@
 <!-- END   SCANALERT CODE -->
 </td>
 </tr>
-</tbody></table></td><td><img src="http://us.st1.yimg.com/store1.yimg.com/Img/trans_1x1.gif" height="1" width="26" border="0" alt="pad"></td><td><a href="index.html"><img src="http://us.st12.yimg.com/us.st.yimg.com/I/calastrology_2046_0" width="0" height="5" border="0" hspace="0" vspace="0"></a><br><br><table border="0" cellspacing="0" cellpadding="0" width="619"><tbody><tr valign="top"><td><center></center><font size="2" face="arial, helvetica, sans-serif"><img src="http://us.st12.yimg.com/us.st.yimg.com/I/calastrology_2047_1025739" width="400" height="37" border="0" hspace="0" vspace="0"><br><br>
+</tbody></table></td><td><img src="http://ep.yimg.com/ca/Img/trans_1x1.gif" height="1" width="26" border="0"></td><td><a href="index.html"><img src="http://ep.yimg.com/ca/I/calastrology_2076_0" width="0" height="5" border="0" hspace="0" vspace="0"></a><br><br><table border="0" cellspacing="0" cellpadding="0" width="619"><tbody><tr valign="top"><td><center></center><font size="2" face="arial, helvetica, sans-serif"><img src="http://ep.yimg.com/ca/I/calastrology_2077_821167" width="400" height="37" border="0" hspace="0" vspace="0"><br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td width="110" valign="top">
@@ -87,13 +87,28 @@ If you would like to be removed from our <b>email</b> newsletter mailing list, p
 <font size="2">
 <b>Additional information from Yahoo!</b>
 </font>
-</td></tr></tbody></table><br><i>This site is hosted by Yahoo! Store. Yahoo! hosts the store pages, ordering system, and order data. Yahoo! automatically collects order information but may only use this information in the aggregate. If you accessed this store through Yahoo! Shopping, Yahoo! also automatically collects information about your shopping experience. Please see the <a href="http://info.yahoo.com/privacy/us/yahoo/details.html">Yahoo! Privacy Policy</a> for more information about how Yahoo! uses this information.</i><br><br></font></td></tr></tbody></table></td></tr></tbody></table>
+</td></tr></tbody></table><br><i>Third-Party Web Beacons: We use third-party web beacons from Yahoo! to help analyze where visitors go and what they do while visiting our website. Yahoo! may also use anonymous information about your visits to this and other websites in order to improve its products and services and provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by Yahoo!, <a href="https://reports.web.analytics.yahoo.com/optout,OptOut.vm?domain=a.analytics.yahoo.com">click here</a>.</i>
+<br><br><br><i>This site is hosted by Yahoo! Store. Yahoo! hosts the store pages, ordering system, and order data. Yahoo! automatically collects order information but may only use this information in the aggregate. If you accessed this store through Yahoo! Shopping, Yahoo! also automatically collects information about your shopping experience. Please see the <a href="http://info.yahoo.com/privacy/us/yahoo/details.html">Yahoo! Privacy Policy</a> for more information about how Yahoo! uses this information.</i><br><br></font></td></tr></tbody></table></td></tr></tbody></table>
 <script type="text/javascript">
 csell_env = 'mud';
 </script>
 <script type="text/javascript">
 // Begin Y! Store Generated Code
- </script><script type="text/javascript" src="http://us.js2.yimg.com/us.js.yimg.com/ult/ylc_1.9.js"></script><script type="text/javascript" src="http://us.js2.yimg.com/us.yimg.com/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
+ </script><script type="text/javascript" src="http://d.yimg.com/mi/ywa.js">
+</script>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+var analytics_token_map = {}; analytics_token_map['TOK_ENTRY_DOMAIN'] = ''; analytics_token_map['TOK_DOCGROUP'] = 'Store'; analytics_token_map['TOK_STATS_URL'] = 'http://a.analytics.yahoo.com/p.pl?a=1000'; analytics_token_map['TOK_PROJECT_ID'] = '1171874426'; analytics_token_map['TOK_DOCNAME'] = 'PrivacyPolicy'; analytics_token_map['TOK_OTHER_DOMAINS'] = '*.store.yahoo.net';  YStore = window.YStore||{};YStore.itatm = analytics_token_map;YWATracker = YWA.getTracker('1000'+YStore.itatm['TOK_PROJECT_ID']);YWATracker.setDocumentName(YStore.itatm['TOK_DOCNAME']);YWATracker.setDocumentGroup(YStore.itatm['TOK_DOCGROUP']);if ('' != YStore.itatm['TOK_ENTRY_DOMAIN']) {   YWATracker.setCookieDomain(YStore.itatm['TOK_ENTRY_DOMAIN']);}YWATracker.setDomains(YStore.itatm['TOK_OTHER_DOMAINS']);
+</script>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+function analytics_BEACON() {  YWATracker.submit(); } 
+</script>
+<script type="text/javascript">
+analytics_BEACON(); </script>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+ </script><script type="text/javascript" src="http://l.yimg.com/a/ult/ylc_1.9.js"></script><script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
 </script>
 <script type="text/javascript">
 // Begin Y! Store Generated Code
@@ -109,18 +124,24 @@ function csell_REC_VIEW_TAG() {  var env = (typeof csell_env == 'string')?csell_
 </script>
 <script type="text/javascript">
 // Begin Y! Store Generated Code
-var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = ''; csell_token_map['TOK_SHOW_CS_RECS'] = 'false'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS'];</script><script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/recs-1.3.2.2.js"></script><script type="text/javascript">
+var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'http://calastrology.csell.store.yahoo.net/cs/recommend?itemids=privacypolicy&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'true'; csell_token_map['TOK_CURR_SYM'] = '';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS'];</script><script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/recs-1.3.2.2.js"></script><script type="text/javascript">
 </script>
 <script type="text/javascript"> 
  <!-- 
  if (document.referrer && (document.referrer!='') && window.Image) 
  { 
- (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=49e98303&catalog=calastrology&r=" + escape(document.referrer) + "&v=1"; }
+ (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=4aeaa3a6&catalog=calastrology&r=" + escape(document.referrer) + "&v=1"; }
  // --> 
  </script><script type="text/javascript"> 
  <!-- 
  if (document.referrer && (document.referrer!='') && window.Image) 
  { 
- (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=49e98303&catalog=calastrology&r=" + escape(document.referrer) + "&v=3"; }
+ (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=4aeaa3a6&catalog=calastrology&r=" + escape(document.referrer) + "&v=3"; }
  // --> 
- </script></body></html>
+ </script><script language="javascript">
+if(window.yzq_p==null)document.write("<scr"+"ipt language=javascript src=http://l.yimg.com/d/lib/bc/bc_2.0.4.js></scr"+"ipt>");
+</script><script language="javascript" src="http://l.yimg.com/d/lib/bc/bc_2.0.4.js"></script><script language="javascript">
+if(window.yzq_p)yzq_p('P=_9feFdj8fr4AP5xY4s3DDQAFz_HrLkrqonoAC.Jt&T=13qjb8kod%2fX%3d1256891002%2fE%3d23732888%2fR%3dst%2fK%3d5%2fV%3d1.1%2fW%3dJ%2fY%3dYAHOO%2fF%3d706020874%2fI%3d1%2fS%3d1%2fJ%3dEA7EFCD8');
+if(window.yzq_s)yzq_s();
+</script><noscript><img width=1 height=1 alt="" src="http://us.bc.yahoo.com/b?P=_9feFdj8fr4AP5xY4s3DDQAFz_HrLkrqonoAC.Jt&T=1404q0cdh%2fX%3d1256891002%2fE%3d23732888%2fR%3dst%2fK%3d5%2fV%3d3.1%2fW%3dJ%2fY%3dYAHOO%2fF%3d2089880819%2fQ%3d-1%2fI%3d1%2fS%3d1%2fJ%3dEA7EFCD8"></noscript>
+</body></html>
