--- a/s/sa/sam/samepoint.com.html
+++ b/s/sa/sam/samepoint.com.html
@@ -1,74 +1,102 @@
-<!--The following is the downloaded HTML source of the samepoint.com privacy policy that was archived on 2009-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090625024537id_/http%3A//www.samepoint.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the samepoint.com privacy policy that was archived on 2009-10-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091030183133id_/http%3A//www.samepoint.com/privacy-policy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US"><head>
 <title>Samepoint Social Conversation Search Privacy Policy</title>
-<link href="http://www.samepoint.com/css/samepoint.css?June200910:47:54" media="screen" rel="stylesheet" type="text/css">
-<meta name="description" content="Samepoint.com utilizes unique technology to bring social conversations together from multiple sources to one defined point. SamePoint.com is presently tracking millions of conversations">
-<meta name="keywords" content="rss, conversation search,social search,Conversations,Comments,Tags,Social Media,Social,blogs,talkikng,points of conversation, conversation points, speaking,social network,">
-<link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="Samepoint Social Search">	
-
-	
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<meta http-equiv="Pragma" content="no-cache">
+<meta name="description" content="Samepoint LLC. has adopted this privacy policy in order to ensure users of our commitment and dedication to privacy. The following privacy guidelines apply to the website Samepoint.com">
+<meta name="keywords" content="private, rss, conversation search,social search,Conversations,Comments,Tags,Social Media,Social,blogs,talkikng,points of conversation, conversation points, speaking,social network,">
+<link rel="shortcut icon" href="http://www.samepoint.biz/favicon.ico" type="image/x-icon">
+<link href="css/corpstyle.css" rel="stylesheet" type="text/css">
+<link href="css/layout.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/js/samepoint.js"></script>
 </head>
 
-<body>
-<center>
-<table>
-<tbody><tr>
-	<td align="center">
-		<a href="http://www.samepoint.com"><img src="images/Logo_SPBeta_01.jpg" border="0" alt="samepoint"></a> 
-	</td>
-	<td nowrap="nowrap" valign="middle" width="250"><div id="comments_pre"><div class="comment">Samepoint is a conversational search engine that helps people discover<br>many points of view across many sources.<p></p><br></div><div class="comment-footer"><br><font color="#636467" size="4">More information:  learn@samepoint.com</font></div></div>
+<body id="page2">
 
-	&nbsp;</td>
-	<td nowrap="nowrap" valign="middle"> </td>
-</tr>
-</tbody></table>
-</center>
+	<div id="main">
+		<!--header -->
+		<div id="header">
+			<div class="row1">
+				<span><b>1.877.521.5635</b>&nbsp;</span>
+				
+			</div>
+			<div class="row2">
+				<ul class="menu">
+					<li><a href="http://www.samepoint.biz">Corporate Home</a></li>
+					<li><a href="http://www.samepoint.com">Search Engine</a></li>
+					<li><a href="about-us.html">About us</a></li>
+					<!-- <li><a href="services.html">Consulting</a></li> -->
+					<li><a href="http://www.samepoint.com/blog">Blog </a></li>
+					<li><a href="api.html">API</a></li>
+					<li><a href="faq.html">FAQ</a></li><li><a href="videos.html">Tutorials</a></li>
+					<li><a href="contact-us.html">Contacts</a></li>
+				</ul>
+
+				<a href="http://www.samepoint.com">
+				<img src="/images/samepointlogo.jpg" width="176" height="69"><br></a>
+				<!-- Social Media Analytics<span></span> -->
+			</div><div align="right">Social Media Analytics Company</div>
 		
-<center>
-<div id="comments"><div class="comment_wide">
-<font size="5" color="#636467">Samepoint.com Privacy Policy</font><br>
+
+		<div id="content">
+		<table>
+		<tbody><tr>
+			
+			<td width="80%">
+		
+			<h1>Samepoint.com Privacy Policy</h1>
 <br>
-Samepoint.com Inc. has adopted this privacy policy in order to ensure users of our commitment and dedication to privacy. The following privacy guidelines apply to the website "Samepoint.com.com" (Site). Samepoint.com Inc. respects your right to privacy. We invite you to visit our site to search or browse the site without revealing who you are or registering with us. However, if you choose to give us personal information via the Internet that we may need, it is our intent to let you know how we will use such information. If you tell us that you do not wish to have this information used as a basis for further contact with you, we will endeavor to respect your wishes. <br>
+Samepoint LLC. has adopted this privacy policy in order to ensure users of our commitment and dedication to privacy. The following privacy guidelines apply to the website "Samepoint.com" (Site). Samepoint LLC. respects your right to privacy. We invite you to visit our site to search or browse the site without revealing who you are or registering with us. However, if you choose to give us personal information via the Internet that we may need, it is our intent to let you know how we will use such information. If you tell us that you do not wish to have this information used as a basis for further contact with you, we will endeavor to respect your wishes. <br>
 <br>
 <br>
 
-<font size="5" color="#636467">Registration</font><br>
+<strong>Registration</strong><br>
 <br>
 Registration is not required to gain access to the Site. However, there are sections of the website which do require a password, some examples include call detail demos and account information.<br>
+
 <br>
-<font size="5" color="#636467">Collection of IP addresses and the use of "Cookies"</font><br>
+<strong>Collection of IP addresses and the use of "Cookies"</strong><br>
 <br>
-When you visit our Site, some information such as your Internet protocol address, Internet service provider, operating system, the Site from which you arrived, and the time and date of your visit may be collected automatically as part of the software operation of this Site. This intake of information is not personally identifiable. Samepoint.com Inc. uses this information solely for internal marketing purposes, for example, to see what pages are most frequently visited in order to improve the Site. After it is used for internal marketing purposes, this information is discarded.<br>
+When you visit our Site, some information such as your Internet protocol address, Internet service provider, operating system, the Site from which you arrived, and the time and date of your visit may be collected automatically as part of the software operation of this Site. This intake of information is not personally identifiable. Samepoint LLC. uses this information solely for internal marketing purposes, for example, to see what pages are most frequently visited in order to improve the Site. After it is used for internal marketing purposes, this information is discarded.<br>
 <br>
 We also collect information through the use of a technology called "cookies." A cookie is a small file that a web site can send to your browser, which is then stored on your system by your browser. The use of cookie technology on Samepoint.com.com is solely for internal marketing purposes. If you are uncomfortable accepting cookies from our Site or any other, you can set your browser to notify you when a Site attempts to send you a cookie, giving you the opportunity to decide for yourself whether or not to accept the cookie. You can also set your browser to turn off cookies.<br>
 <br>
-<font size="5" color="#636467">Personal Information</font><br>
+<strong>Personal Information</strong><br>
 <br>
-Any time Samepoint.com Inc. collects information that you voluntarily submit, it is Samepoint.com Inc.'s intent to inform you of why this information is being requested and how it is going to be used. We may collect personal information from you including phone, electronic mail address, and other information you choose to provide at various times, for example, when you complete an online form or request. Samepoint.com Inc. uses the personal information we collect online to process your requests, inform you of opportunities that we believe you might find interesting, and to understand your needs so that we can provide you with the highest quality of service. Samepoint.com Inc. intends to protect and secure the personal information that you submit to this Site. Samepoint.com Inc. will not sell, distribute, or give your personal information to any third party without your knowledge and consent. Samepoint.com Inc. shall not be liable for any personal information that you submit to external vendors or to any web site linked to this Site. <br>
+Any time Samepoint LLC. collects information that you voluntarily submit, it is Samepoint LLC.'s intent to inform you of why this information is being requested and how it is going to be used. We may collect personal information from you including phone, electronic mail address, and other information you choose to provide at various times, for example, when you complete an online form or request. Samepoint LLC. uses the personal information we collect online to process your requests, inform you of opportunities that we believe you might find interesting, and to understand your needs so that we can provide you with the highest quality of service. Samepoint LLC. intends to protect and secure the personal information that you submit to this Site. Samepoint LLC. will not sell, distribute, or give your personal information to any third party without your knowledge and consent. Samepoint LLC. shall not be liable for any personal information that you submit to external vendors or to any web site linked to this Site. <br>
 <br>
-<font size="5" color="#636467">Resume Collection</font><br>
+<strong>Resume Collection</strong><br>
+
 <br>
-The Site provides a capability for users to submit their resumes to Samepoint.com Inc. via email. Any resume so received by Samepoint.com Inc. will be held in confidence and used only for the purpose of considering the submitting party for employment. Such information is not shared with third parties external to Samepoint.com Inc. domestic and international branches. Please see Career Source's Privacy Statement. <br>
+The Site provides a capability for users to submit their resumes to Samepoint LLC. via email. Any resume so received by Samepoint LLC. will be held in confidence and used only for the purpose of considering the submitting party for employment. Such information is not shared with third parties external to Samepoint LLC. domestic and international branches. Please see Career Source's Privacy Statement. <br>
 <br>
-<font size="5" color="#636467">Children's usage of the Site</font><br>
+<strong>Children's usage of the Site</strong><br>
 <br>
 This Site is intended for adult use only. It is not intended for children, and we ask that minors not submit any personal information to us.<br>
 <br>
-<font size="5" color="#636467">Contact</font><br>
+<strong>Contact</strong><br>
 <br>
 If you have any questions about this Site, please email the webmaster at webteam@Samepoint.com.com<br>
 <br>
-<font size="5" color="#636467">Nature of Data on the Internet</font><br>
+<strong>Nature of Data on the Internet</strong><br>
+
 <br>
-It is Samepoint.com Inc.'s intent to guard any personal information that you submit to us, and Samepoint.com Inc. will continue to take steps to maintain the security of this Site. However, as a multi-national corporation, the data we collect from you may be internationally distributed throughout Samepoint.com Inc. and the open nature of the Internet is such that data may flow over networks without security measures and may be accessed and used by people other than those for whom the data is intended. Therefore, in submitting personal information to the Site, you assume the risk of a third party obtaining that information.<br>
+It is Samepoint LLC.'s intent to guard any personal information that you submit to us, and Samepoint LLC. will continue to take steps to maintain the security of this Site. However, as a multi-national corporation, the data we collect from you may be internationally distributed throughout Samepoint LLC. and the open nature of the Internet is such that data may flow over networks without security measures and may be accessed and used by people other than those for whom the data is intended. Therefore, in submitting personal information to the Site, you assume the risk of a third party obtaining that information.<br>
 <br>
-	</div>
-</div>
-</center>
-<br><font face="sans-serif" size="2"></font><center><font face="sans-serif" size="2"><a href="http://www.netvibes.com/samepoint">Netvibes Page</a> | <a href="http://www.samepoint.com/trends.html">Trends</a> | <a href="http://www.samepoint.com/about-us.html">About Us</a> - <a href="http://www.samepoint.com/investors.html">Investors</a> - <a href="http://www.samepoint.com/contact-us.html">Contact Us</a> - <a href="http://www.samepoint.com/rss.html">RSS Feeds</a> - <a href="http://www.samepoint.com/privacy-policy.html">Privacy Policy</a> - <a href="http://www.samepoint.com/terms-of-use.html">Terms of Use</a> - <a href="#" onclick="installSamepointOpenSearch(); return false;">Install Samepoint Search Plugin</a><br><a href="http://www.linkedin.com/in/samepoint">LinkedIn Page</a> | <a href="http://twitter.com/samepoint">Follow us on Twitter</a>  | <a href="http://www.flickr.com/photos/30272442@N03/2836686854/">How to use (Pics on flickr)</a> | <a href="http://www.samepoint.com/blog">Blog</a> | <a href="http://samepoint.tumblr.com/">FAQ</a> <br><br><a href="http://feedburner.google.com/fb/a/mailverify?uri=SamepointSocialConversationBlog&amp;loc=en_US">Subscribe to Samepoint Social Conversation Blog by Email</a><br>© Samepoint.com Inc. 2009 </font> </center><!-- <div style="height:1px;line-height:0"></div><div style="text-align:center;margin-top:1.4em" class=clr><div id="bsf" style="padding:1.8em 0;margin-top:0"><form name="bottomform" method=get ><div><input  type="text" name="q" size="41" maxlength=2048 value="" title="Search Social Media"> <input class="searchbuttonwhitetext" type=submit name="searchb2" value=" search social media "></div></form></div> -->
+</td>
+		</tr>
+	</tbody></table>
+		</div>
+		<div id="footer">
+		<div class="bottomorow1">
+				<center>
+				<br><font face="sans-serif" size="2"></font><center><font face="sans-serif" size="2"><a href="http://www.netvibes.com/samepoint">Netvibes Page</a> | <a href="http://www.samepoint.biz/trends.html">Trends</a> | <a href="http://www.samepoint.biz/about-us.html">About Us</a> - <a href="http://www.samepoint.biz/investors.html">Investors</a> - <a href="http://www.samepoint.biz/contact-us.html">Contact Us</a> - <a href="http://www.samepoint.biz/rss.html">RSS Feeds</a> - <a href="http://www.samepoint.biz/privacy-policy.html">Privacy Policy</a> - <a href="http://www.samepoint.biz/terms-of-use.html">Terms of Use</a> - <a href="#" onclick="installSamepointOpenSearch(); return false;">Install Samepoint Search Plugin</a><br><a href="http://www.linkedin.com/in/samepoint">LinkedIn Page</a> | <a href="http://twitter.com/samepoint">Follow us on Twitter</a>  | <a href="http://www.flickr.com/photos/30272442@N03/2836686854/">How to use (Pics on flickr)</a> | <a href="http://www.samepoint.com/blog">Blog</a> | <a href="http://samepoint.tumblr.com/">FAQ</a> <br><br><a href="http://feedburner.google.com/fb/a/mailverify?uri=SamepointSocialConversationBlog&amp;loc=en_US">Subscribe to Samepoint Social Conversation Blog by Email</a><br>© Samepoint.com LLC. 2009 </font> </center><!-- <div style="height:1px;line-height:0"></div><div style="text-align:center;margin-top:1.4em" class=clr><div id="bsf" style="padding:1.8em 0;margin-top:0"><form name="bottomform" method=get ><div><input  type="text" name="q" size="41" maxlength=2048 value="samepoint" title="Search Social Media"> <input class="searchbuttonwhitetext" type=submit name="searchb2" value=" search social media "></div></form></div> -->
+				</center>
+
+			</div>
+		</div>
 <!-- Start Quantcast tag -->
 <script type="text/javascript">
 _qoptions={
@@ -80,12 +108,8 @@ qacct:"p-d0piZP66vWJZ-"
 <a href="http://www.quantcast.com/p-d0piZP66vWJZ-" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-d0piZP66vWJZ-.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a>
 </noscript>
 <!-- End Quantcast tag -->
-<!-- 
-<center>
-<p style="margin-top:10px; margin-bottom:0; padding-bottom:0; text-align:center; line-height:0"><a href="http://feeds2.feedburner.com/~r/SamepointSocialConversationBlog/~6/1"><img src="http://feeds2.feedburner.com/SamepointSocialConversationBlog.1.gif" alt="Samepoint Social Conversation Blog" style="border:0"></a></p><p style="margin-top:5px; padding-top:0; font-size:x-small; text-align:center"><a href="http://feedburner.google.com/fb/a/headlineanimator/install?id=5h6vtfjmtoisale4riu576qrr8&amp;w=1" onclick="window.open(this.href, 'haHowto', 'width=520,height=600,toolbar=no,address=no,resizable=yes,scrollbars'); return false" target="_blank"></a></p>
-</center>
 
---><script type="text/javascript">
+<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
@@ -94,10 +118,7 @@ var pageTracker = _gat._getTracker("UA-5003677-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
- <p>
-    <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88"></a>
-  </p>
-  
 
 
-</body></html>
+
+</div></div></body></html>
