--- a/t/to/tor/torrentbar.com.html
+++ b/t/to/tor/torrentbar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the torrentbar.com privacy policy that was archived on 2009-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090626233735id_/http%3A//www.torrentbar.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the torrentbar.com privacy policy that was archived on 2009-10-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091031125658id_/http%3A//www.torrentbar.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_masterheader"><title>
 	privacy policy at TorrentBar - www.torrentbar.com
@@ -32,7 +32,7 @@
 	  </div>
 	  <div id="mid">
 		  <div id="left_advert">
-              <!-- BEGIN STANDARD TAG - 160 x 600 - room&amp;bar: torrentroom - DO NOT MODIFY --> <iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="160" height="600" src="http://www.torrentbar.com/b.html"></iframe> <!-- END TAG --> <br>
+              <!-- BEGIN STANDARD TAG - 160 x 600 - room&amp;bar: torrentroom - DO NOT MODIFY --> <iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="160" height="600" src="http://www.torrentbar.com/earning/barleftad.html"></iframe> <!-- END TAG --> <br>
               <!-- BEGIN STANDARD TAG - 160 x 600 - room&amp;bar: torrentroom - DO NOT MODIFY -->
 <iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="160" height="600" src="http://adserving.cpxinteractive.com/st?ad_type=iframe&amp;ad_size=160x600&amp;section=384460"></iframe>
 <!-- END TAG -->
@@ -47,7 +47,7 @@ var AdBrite_Border_Color = 'ff3366';
 var AdBrite_URL_Color = 'ff3366';
 try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1178664&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1178664&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20090626233735id_%2Fhttp%253A%2F%2Fwww.torrentbar.com%2Fprivacy.html" type="text/javascript"></script>
+<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1178664&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1178664&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20091031125658id_%2Fhttp%253A%2F%2Fwww.torrentbar.com%2Fprivacy.html" type="text/javascript"></script>
 <a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=1178664&amp;afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#ff3366;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
 <!-- End: AdBrite -->			
 			<div style="margin-top:5px"></div>
@@ -96,7 +96,7 @@ var AdBrite_Border_Color = 'ff3366';
 var AdBrite_URL_Color = 'ff3366';
 try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1178668&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1178668&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20090626233735id_%2Fhttp%253A%2F%2Fwww.torrentbar.com%2Fprivacy.html" type="text/javascript"></script>
+<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1178668&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1178668&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20091031125658id_%2Fhttp%253A%2F%2Fwww.torrentbar.com%2Fprivacy.html" type="text/javascript"></script>
 <a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=1178668&amp;afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#ff3366;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
 <!-- End: AdBrite -->   
 		        </div>
