--- a/t/th/the/thepensionsregulator.gov.uk.html
+++ b/t/th/the/thepensionsregulator.gov.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thepensionsregulator.gov.uk privacy policy that was archived on 2009-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090629174814id_/http%3A//www.thepensionsregulator.gov.uk/aboutSite/yourPrivacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thepensionsregulator.gov.uk privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102013817id_/http%3A//www.thepensionsregulator.gov.uk/aboutSite/yourPrivacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
     <!-- PageID 4092 - published by RedDot 7.5 - 7.5.1.103 - 20937 -->
@@ -168,9 +168,11 @@
               </td>
             </tr>
           </tbody></table><br>
-          <div id="dutySideBanner">
-            <a href="http://www.thepensionsregulator.gov.uk/duty/" onclick="ns_onclick(this,'','home.onclick.dutyoftrust_small.banner','clickin'); return false" title="Duty of trust"><img src="/images/dutyOfTrustBanner.jpg" alt="Duty of trust"></a>
-          </div>
+          <!--
+<div id="dutySideBanner">
+<a href=http://www.thepensionsregulator.gov.uk/duty/ onclick="ns_onclick(this,'','home.onclick.dutyoftrust_small.banner','clickin'); return false" title="Duty of trust"><img src="/images/dutyOfTrustBanner.jpg" alt="Duty of trust"></a>
+</div>
+-->
         </div>
       </div>
       <div id="contentWrapA">
